k8s-manifests/auth-proxy.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-proxy
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: auth-proxy
