k8s-manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todo-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
      - localhost
      secretName: localhost-tls
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: auth-proxy
          servicePort: 4180
