k8s-manifests/secured-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: secured-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start"
spec:
  tls:
    - hosts:
      - todo-aks-cluster.centralus.cloudapp.azure.com
      secretName: todo-aks-cluster-com-tls
  rules:
  - host: todo-aks-cluster.centralus.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
