k8s-manifests/unsecured-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: unsecured-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
      - todo-aks-cluster.centralus.cloudapp.azure.com
      secretName: todo-aks-cluster-com-tls
  rules:
  - host: todo-aks-cluster.centralus.cloudapp.azure.com
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
